--- a/inventarios/staticfiles/templates/html/app/add-entradas.html
+++ b/inventarios/staticfiles/templates/html/app/add-entradas.html
@@ -451,8 +451,14 @@
         var proveedor = parseInt(document.getElementById('proveedor').value);
         var fileInput = document.getElementById('archivo');
         var file = fileInput.files[0]; // Obtiene el archivo seleccionado
-        
+
+        {% if entradas_id %}
         var mantener = document.getElementById('mantener_archivo').value;
+        {% else %}
+        var mantener = false;
+        {% endif %}
+        
+        
     
         // Verifica que cantidad y valor_unitario_entrada_a tengan valores válidos
         if (isNaN(cantidad)) {
