feature(filtros de entradas iniciales y de stock)

--- a/inventarios/inventarios/staticfiles/templates/html/app/list-bodegas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-bodegas.html
@@ -22,7 +22,7 @@
                     <th>Nombre de Lote</th>
                     <th>Ubicación</th>
                     <th>Finca</th>
-                    <th>Lote Asociado</th>
+                    <th>Bodega Asociada</th>
                     <th>Usuarios Asociados</th>
                     <th>Acciones</th>
                 </tr>
