--- a/inventarios/inventarios/staticfiles/templates/html/app/todo.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/todo.html
@@ -10,12 +10,18 @@
 
     <!-- Favicon  -->
     <!--<link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">-->
-    <link rel="shortcut icon" href="{% static '/assets/images/logo_ottsa.svg' %}" />
+    <link rel="shortcut icon" href="{% static '/assets/images/LogoCrecentoAgricola.png' %}" />
     <link rel="stylesheet" href="{% static '/assets/css/backend-plugin.min.css' %}">
     <link rel="stylesheet" href="{% static '/assets/css/backend.css' %}">
     <link rel="stylesheet" href="{% static '/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static '/assets/vendor/line-awesome/dist/line-awesome/css/line-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static '/assets/vendor/remixicon/fonts/remixicon.css' %}">
+    <!-- Agrega estos enlaces a las bibliotecas de DataTables -->
+    <link href="https://cdn.datatables.net/1.13.8/css/dataTables.jqueryui.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.8/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.8/js/dataTables.jqueryui.min.js"></script>>
+
 </head>
 <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -87,9 +93,9 @@
         <div class="iq-sidebar  sidebar-default ">
             <div class="iq-sidebar-logo d-flex align-items-center justify-content-between">
                 <a href="#" class="header-logo">
-                    <img src="{% static 'assets/images/logo_ottsa.svg' %}" class="img-fluid rounded-normal light-logo"
-                        alt="logo">
-                    <h5 class="logo-title light-logo ml-3">Inventarios Ottsa</h5>
+                    {% comment %} <img src="{% static 'assets/images/LogoCrecentoAgricola.png' %}" class="img-fluid rounded-normal light-logo"
+                        alt="logo"> {% endcomment %}
+                    <h5 class="logo-title light-logo ml-3">Crecento Inventarios</h5>
                 </a>
                 <div class="iq-menu-bt-sidebar ml-0">
                     <i class="las la-bars wrapper-menu" style="color: #FFF;"></i>
@@ -137,9 +143,7 @@
 
                         <li class=" ">
                             <a href="#fincas" class="collapsed" data-toggle="collapse" aria-expanded="false">
-                                <span class="material-symbols-outlined">
-                                    home
-                                </span>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" height="24" viewBox="0 -960 960 960" width="24"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg>
                                 <span class="ml-4">Fincas</span>
                                 <svg class="svg-icon iq-arrow-right arrow-active" width="20" height="20"
                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
@@ -156,22 +160,22 @@
                                     </a>
                                 </li>
                                 <li class="">
-                                    <a href="{% url 'list_lotes' %}">
-                                        <i class="las la-minus"></i><span>Listado Lotes</span>
-                                    </a>
-                                </li>
-                                <li class="">
                                     <a href="{% url 'list_bodegas' %}">
                                         <i class="las la-minus"></i><span>Listado Bodegas</span>
                                     </a>
                                 </li>
+                                <li class="">
+                                    <a href="{% url 'list_lotes' %}">
+                                        <i class="las la-minus"></i><span>Listado Lotes</span>
+                                    </a>
+                                </li>
+                                
                             </ul>
                         </li>
                         <li class=" ">
                             <a href="#proveedores" class="collapsed" data-toggle="collapse" aria-expanded="false">
-                                <span class="material-symbols-outlined">
-                                    box_add
-                                </span>
+                                
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" fill="white" width="24"><path d="M640-640h120-120Zm-440 0h338-18 14-334Zm16-80h528l-34-40H250l-34 40Zm184 270 80-40 80 40v-190H400v190Zm182 330H200q-33 0-56.5-23.5T120-200v-499q0-14 4.5-27t13.5-24l50-61q11-14 27.5-21.5T250-840h460q18 0 34.5 7.5T772-811l50 61q9 11 13.5 24t4.5 27v196q-19-7-39-11t-41-4v-122H640v153q-35 20-61 49.5T538-371l-58-29-160 80v-320H200v440h334q8 23 20 43t28 37Zm138 0v-120H600v-80h120v-120h80v120h120v80H800v120h-80Z"/></svg>
                                 <span class="ml-4">Proveedores</span>
                                 <svg class="svg-icon iq-arrow-right arrow-active" width="20" height="20"
                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
@@ -199,9 +203,8 @@
                         </li>
                         <li class=" ">
                             <a href="#insumos" class="collapsed" data-toggle="collapse" aria-expanded="false">
-                                <span class="material-symbols-outlined">
-                                    inventory_2
-                                </span>
+                                
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" height="24" viewBox="0 -960 960 960" width="24"><path d="M200-80q-33 0-56.5-23.5T120-160v-451q-18-11-29-28.5T80-680v-120q0-33 23.5-56.5T160-880h640q33 0 56.5 23.5T880-800v120q0 23-11 40.5T840-611v451q0 33-23.5 56.5T760-80H200Zm0-520v440h560v-440H200Zm-40-80h640v-120H160v120Zm200 280h240v-80H360v80Zm120 20Z"/></svg>
                                 <span class="ml-4">Insumos</span>
                                 <svg class="svg-icon iq-arrow-right arrow-active" width="20" height="20"
                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
@@ -253,9 +256,7 @@
                         </li>
                         <li class=" ">
                             <a href="#entradas" class="collapsed" data-toggle="collapse" aria-expanded="false">
-                                <span class="material-symbols-outlined">
-                                    call_received
-                                </span>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" height="24" viewBox="0 -960 960 960" width="24"><path d="M200-200v-400h80v264l464-464 56 56-464 464h264v80H200Z"/></svg>
                                 <span class="ml-4">Entradas</span>
                                 <svg class="svg-icon iq-arrow-right arrow-active" width="20" height="20"
                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
@@ -275,7 +276,7 @@
                                 {%endif%}
                                 <li class="">
                                     <a href="{% url 'list_entradas' %}">
-                                        <i class="las la-minus"></i><span>Listado de Entradas</span>
+                                        <i class="las la-minus"></i><span>Stock</span>
                                     </a>
                                 </li>
                                 
@@ -290,9 +291,7 @@
                         </li>
                         <li class=" ">
                             <a href="#salidas" class="collapsed" data-toggle="collapse" aria-expanded="false">
-                                <span class="material-symbols-outlined">
-                                    call_made
-                                </span>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" height="24" viewBox="0 -960 960 960" width="24"><path d="m216-160-56-56 464-464H360v-80h400v400h-80v-264L216-160Z"/></svg>
                                 <span class="ml-4">Salidas</span>
                                 <svg class="svg-icon iq-arrow-right arrow-active" width="20" height="20"
                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
@@ -318,6 +317,15 @@
                                 
                             </ul>
                         </li>
+                        <hr color="white" width="75%"/>
+                        <li class=" ">
+                            
+                            <div class="d-flex align-items-center justify-content-center mt-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" height="24" viewBox="0 -960 960 960" width="24"><path d="M200-120q-33 0-56.5-23.5T120-200v-160h80v160h560v-560H200v160h-80v-160q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm220-160-56-58 102-102H120v-80h346L364-622l56-58 200 200-200 200Z"/></svg>
+                                <a class="collapsed" data-toggle="collapse" aria-expanded="false" href="{% url 'logout' %}">    <span class="ml-4">Logout</span></a>
+                            </div>
+                        </li>
+
                     </ul>
                 </nav>
             </div>
@@ -328,7 +336,7 @@
                     <div class="iq-navbar-logo d-flex align-items-center justify-content-between">
                         <i class="ri-menu-line wrapper-menu"></i>
                         <a href="#" class="header-logo">
-                            <img src="{% static '/assets/images/logo_ottsa.svg' %}" class="img-fluid rounded-normal"
+                            <img src="{% static '/assets/images/LogoCrecentoAgricola.png' %}" class="img-fluid rounded-normal"
                                 alt="logo">
                             <h5 class="logo-title ml-3">Invetarios Ottsa</h5>
 
@@ -436,7 +444,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav-item nav-icon dropdown">
+                                {% comment %} <li class="nav-item nav-icon dropdown">
                                     <a href="#" class="search-toggle dropdown-toggle" id="dropdownMenuButton"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
@@ -462,14 +470,14 @@
                                             </div>
                                         </div>
                                     </div>
-                                </li>
+                                </li> {% endcomment %}
                                 <li class="nav-item nav-icon dropdown caption-content">
                                     <a href="#" class="search-toggle dropdown-toggle" id="dropdownMenuButton4"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <img src="{% static '/assets/images/user/1.png' %}" class="img-fluid rounded"
+                                        <img src="{% static '/assets/images/LogoCrecentoAgricola.png' %}" class="img-fluid rounded"
                                             alt="user">
                                     </a>
-                                    <div class="iq-sub-dropdown dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    {% comment %} <div class="iq-sub-dropdown dropdown-menu" aria-labelledby="dropdownMenuButton">
                                         <div class="card shadow-none m-0">
                                             <div class="card-body p-0 text-center">
                                                 <div class="p-3">
@@ -487,7 +495,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> {% endcomment %}
                                 </li>
                             </ul>
                         </div>
@@ -534,18 +542,10 @@
             <div class="card">
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-lg-6">
-                            <ul class="list-inline mb-0">
-                                <li class="list-inline-item"><a href="../backend/privacy-policy.html">Privacy Policy</a>
-                                </li>
-                                <li class="list-inline-item"><a href="../backend/terms-of-service.html">Terms of Use</a>
-                                </li>
-                            </ul>
-                        </div>
                         <div class="col-lg-6 text-right">
                             <span class="mr-1">
-                                <script>document.write(new Date().getFullYear())</script>©
-                            </span> <a href="#" class="">Ottsa</a>.
+                                <script>document.write(new Date().getFullYear())</script>
+                            </span> Ottsa ©
                         </div>
                     </div>
                 </div>
