fix( user lateral panel and logout buttom)

--- a/inventarios/staticfiles/templates/html/app/todo.html
+++ b/inventarios/staticfiles/templates/html/app/todo.html
@@ -318,6 +318,17 @@
                                 
                             </ul>
                         </li>
+
+
+                        <li class=" ">
+                            <a href="{% url 'logout' %}">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h280v80H200Zm440-160-55-58 102-102H360v-80h327L585-622l55-58 200 200-200 200Z" fill="#ffffff"/></svg><span class="ml-4">Salir</span></a>
+                        </li>
+
+
+                        <div class="d-flex align-items-center justify-content-center mt-3">
+                            
+                        </div>
                     </ul>
                 </nav>
             </div>
@@ -469,7 +480,7 @@
                                         <img src="{% static '/assets/images/user/1.png' %}" class="img-fluid rounded"
                                             alt="user">
                                     </a>
-                                    <div class="iq-sub-dropdown dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    {% comment %} <div class="iq-sub-dropdown dropdown-menu" aria-labelledby="dropdownMenuButton">
                                         <div class="card shadow-none m-0">
                                             <div class="card-body p-0 text-center">
                                                 <div class="p-3">
@@ -487,7 +498,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> {% endcomment %}
                                 </li>
                             </ul>
                         </div>
