--- a/inventarios/inventarios/staticfiles/templates/html/app/add-entradas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-entradas.html
@@ -37,7 +37,17 @@
                 {% csrf_token %}
                 <div class="row"> 
 
-                   
+                    <div class="col-md-6">                      
+                        <div class="form-group">
+                            <label for="fecha_vencimiento">Fecha de Vencimiento *</label>
+                            {% if entradas_id %}
+                            <input type="date" class="form-control" placeholder="Ingrese la fecha de vencimiento" required id="fecha_vencimiento" name="fecha_vencimiento" value="{{ entradas.fecha_vencimiento|date:'Y-m-d' }}">
+                            {% else %}
+                            <input type="date" class="form-control" placeholder="Ingrese la fecha de vencimiento" required id="fecha_vencimiento" name="fecha_vencimiento">
+                            {% endif %}
+                            <div class="help-block with-errors"></div>
+                        </div>
+                    </div>
                 
                     <div class="col-md-6">                      
                         <div class="form-group">
@@ -80,9 +90,9 @@
                             <label for="valor_unitario_entrada_a">Valor Unitario ($) *</label>
                             
                             {% if entradas_id %}
-                            <input type="text" class="form-control" placeholder="0.00" oninput="formatCurrency(this)" required id="valor_unitario_entrada_a" name="valor_unitario_entrada_a" required>
+                            <input type="text" class="form-control" placeholder="0.00" onblur="formatCurrency(this)" required id="valor_unitario_entrada_a" name="valor_unitario_entrada_a" required>
                             {% else %}
-                            <input type="text" class="form-control" placeholder="0.00" oninput="formatCurrency(this)" required id="valor_unitario_entrada_a" name="valor_unitario_entrada_a" required>
+                            <input type="text" class="form-control" placeholder="0.00" onblur="formatCurrency(this)" required id="valor_unitario_entrada_a" name="valor_unitario_entrada_a" required>
                             {% endif %}
                             <script>
                                 var vlrunitario = parseInt("{{ entradas.valor_unitario_entrada_a }}");
@@ -101,20 +111,6 @@
                             {% endif %}
                         </div>
                     </div>
-
-                    <div class="col-md-6">                      
-                        <div class="form-group">
-                            <label for="fecha_vencimiento">Fecha de Vencimiento *</label>
-                            {% if entradas_id %}
-                            <input type="date" class="form-control" placeholder="Ingrese la fecha de vencimiento" required id="fecha_vencimiento" name="fecha_vencimiento" value="{{ entradas.fecha_vencimiento|date:'Y-m-d' }}">
-                            {% else %}
-                            <input type="date" class="form-control" placeholder="Ingrese la fecha de vencimiento" required id="fecha_vencimiento" name="fecha_vencimiento">
-                            {% endif %}
-                            <div class="help-block with-errors"></div>
-                        </div>
-                    </div>
-
-
 
                 
                     <div class="col-md-6">
@@ -161,7 +157,17 @@
                         </div>
                     </div>
                 
-                    
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="proveedor">Proveedor *</label>
+                            <select id="proveedor" name="proveedor" class="selectpicker form-control" data-style="py-0" required>
+                                {%for proveedor in proveedores%}
+                                <option value="{{proveedor.id}}" selected >{{proveedor.razon_social}}</option>
+                                
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
 
                     <div class="col-md-6">
                         <div class="form-group">
@@ -174,18 +180,6 @@
                                 {% endif %}
                                 <label class="custom-file-label" for="inputGroupFile01">Escoge el Archivo</label>
                             </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="proveedor">Proveedor *</label>
-                            <select id="proveedor" name="proveedor" class="selectpicker form-control" data-style="py-0" required>
-                                {%for proveedor in proveedores%}
-                                <option value="{{proveedor.id}}" selected >{{proveedor.razon_social}}</option>
-                                
-                                {% endfor %}
-                            </select>
                         </div>
                     </div>
                     {% if entradas_id %}
