fix(formato valor unitario)

--- a/inventarios/staticfiles/templates/html/app/todo.html
+++ b/inventarios/staticfiles/templates/html/app/todo.html
@@ -683,7 +683,7 @@
             input.setAttribute('data-rawvalue', numericValue);
     
             // Formatear el valor con comas en la parte entera
-            let formattedValue = numericValue.toLocaleString('en-US', { maximumFractionDigits: 2 });
+            let formattedValue = numericValue.toLocaleString('es-CO', { maximumFractionDigits: 2 });
     
             // Asignar el valor formateado al input
             input.value = formattedValue;
