--- a/inventarios/inventarios/staticfiles/templates/html/app/add-entradas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-entradas.html
@@ -76,6 +76,7 @@
                             <input type="number" class="form-control" placeholder="Ingrese cantidad" required id="cantidad" name="cantidad">
                             <script>
                                 var vlrcantidad = parseInt("{{ entradas.cantidad }}");
+                                console.log(vlrcantidad)
                                 document.getElementById('cantidad').value = vlrcantidad;
                             </script>
                             {% else %}
@@ -90,12 +91,16 @@
                             <label for="valor_unitario_entrada_a">Valor Unitario ($) *</label>
                             
                             {% if entradas_id %}
-                            <input type="text" class="form-control" placeholder="0.00" onblur="formatCurrency(this)" required id="valor_unitario_entrada_a" name="valor_unitario_entrada_a" required>
+                            <input type="number" step="any" class="form-control" required id="valor_unitario_entrada_a" name="valor_unitario_entrada_a" required>
                             {% else %}
-                            <input type="text" class="form-control" placeholder="0.00" onblur="formatCurrency(this)" required id="valor_unitario_entrada_a" name="valor_unitario_entrada_a" required>
+                            <input type="number" step="any" class="form-control" required id="valor_unitario_entrada_a" name="valor_unitario_entrada_a" required>
                             {% endif %}
                             <script>
+
+                                /* onblur="formatCurrency(this)"
+                                onblur="formatCurrency(this)"*/
                                 var vlrunitario = parseInt("{{ entradas.valor_unitario_entrada_a }}");
+                                
                                 document.getElementById('valor_unitario_entrada_a').value = vlrunitario;
                             </script>
                         </div>
@@ -107,7 +112,7 @@
                             {% if entradas_id %}
                             <input type="text" class="form-control" oninput="formatCurrency(this)" placeholder="Ingrese valor total" required id="total" name="total" value="{{ entradas.total }}" disabled>
                             {% else %}
-                            <input type="text" class="form-control" oninput="formatCurrency(this)" placeholder="Ingrese valor total" required id="total" name="total" disabled>
+                            <input type="text" class="form-control" oninput="formatCurrency(this)" placeholder="Ingrese valor total" required id="total" name="total" value="0" disabled>
                             {% endif %}
                         </div>
                     </div>
@@ -273,6 +278,7 @@
 
 </script>
 
+
 <script>
     {% if entradas_id %}
     document.getElementById('unidad_medida').value = "{{entradas.unidad_id}}";
@@ -317,7 +323,7 @@
     // Cálculo del valor total en función de la cantidad y el valor unitario.
 
     function recalculateTotal() {
-        var valunit = parseFloat(document.getElementById('valor_unitario_entrada_a').getAttribute('data-rawvalue')) || 0;
+        var valunit = parseFloat(document.getElementById('valor_unitario_entrada_a').value) || 0;
         var cantidad = parseFloat(document.getElementById('cantidad').value) || 0;
         var total = valunit * cantidad;
 
@@ -474,7 +480,7 @@
         var payload = new FormData();
         payload.append('fecha_vencimiento', fecha_vencimiento);
         payload.append('cantidad', cantidad);
-        payload.append('valor_unitario_entrada_a', valor_unitario_entrada_a*1000);
+        payload.append('valor_unitario_entrada_a', valor_unitario_entrada_a);
         payload.append('numero_factura', numero_factura);
         payload.append('bodega', bodega);
         payload.append('insumo', insumo);
