--- a/inventarios/staticfiles/templates/html/app/todo.html
+++ b/inventarios/staticfiles/templates/html/app/todo.html
@@ -318,11 +318,11 @@
                                 
                             </ul>
                         </li>
-
-
+                        <hr size="2px" color="white" />
                         <li class=" ">
-                            <a href="{% url 'logout' %}">
-                                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h280v80H200Zm440-160-55-58 102-102H360v-80h327L585-622l55-58 200 200-200 200Z" fill="#ffffff"/></svg><span class="ml-4">Salir</span></a>
+                            
+                            <a href="{% url 'logout' %}">Logout</a>
+                                
                         </li>
 
 
