--- a/inventarios/inventarios/staticfiles/templates/html/app/list-entradas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-entradas.html
@@ -160,6 +160,7 @@
 </div>
 
 
+<script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script>
     $(document).ready(function () {
         var tabla = $('#suppliersTable').DataTable({
@@ -197,7 +198,6 @@
         });
     });
 </script>
-
 
 <!--<script>
     {% if user.is_authenticated %}
