--- a/inventarios/inventarios/staticfiles/templates/html/app/list-entradas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-entradas.html
@@ -164,6 +164,8 @@
 <script>
     $(document).ready(function () {
         var tabla = $('#suppliersTable').DataTable({
+            paging: false,
+            searching: false
             "language": {
                 "search": "Buscar:",
                 "lengthMenu": "Mostrar _MENU_ entradas",
