--- a/inventarios/inventarios/staticfiles/templates/html/app/list-entradas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-entradas.html
@@ -29,7 +29,7 @@
         {%endif%}
     </div>
 </div>
-<div class="col-sm-12">
+{% comment %} <div class="col-sm-12">
     <div class="card">
         <div class="card-body">
             <div class="row"> 
@@ -57,7 +57,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> {% endcomment %}
 <div class="col-lg-12">
     <div class="table-responsive rounded mb-3">
         <table class="data-table table mb-0 tbl-server-info" id="suppliersTable">
