--- a/inventarios/static/templates/html/app/add-entradas.html
+++ b/inventarios/static/templates/html/app/add-entradas.html
@@ -510,7 +510,7 @@
         var message = isEditMode ? 'Entrada editada exitosamente' : 'Entrada creada exitosamente';
     
         // ...
-        activarLoader()
+        activarLoader();
         fetch(url, {
             method: httpMethod,
             headers: {
@@ -523,7 +523,8 @@
         })
         .then(response => {
             if (response.status === 201 || response.status === 200) {
-                desactivarLoader()
+                desactivarLoader();
+                desactivarLoader();
                 showAlertInModal(message); // Asegúrate de que esta función esté definida o usa alert()
             } else if (response.status === 400) {
                 desactivarLoader()
