--- a/inventarios/staticfiles/templates/html/app/add-entradas.html
+++ b/inventarios/staticfiles/templates/html/app/add-entradas.html
@@ -524,7 +524,7 @@
         .then(response => {
             if (response.status === 201 || response.status === 200) {
                 desactivarLoader();
-                
+                desactivarLoader();
                 showAlertInModal(message); // Asegúrate de que esta función esté definida o usa alert()
                 desactivarLoader();
             } else if (response.status === 400) {
@@ -535,6 +535,7 @@
                 desactivarLoader();
                 showAlertInModal(`Error ${response.status}: ${response.statusText}`);
             }
+            desactivarLoader();
         })
         .catch(error => {
             desactivarLoader()
