--- a/inventarios/static/templates/html/app/add-entradas.html
+++ b/inventarios/static/templates/html/app/add-entradas.html
@@ -535,6 +535,7 @@
                 desactivarLoader();
                 showAlertInModal(`Error ${response.status}: ${response.statusText}`);
             }
+            desactivarLoader();
         })
         .catch(error => {
             desactivarLoader()
