--- a/inventarios/inventarios/staticfiles/templates/html/app/add-entradas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-entradas.html
@@ -510,7 +510,7 @@
         var message = isEditMode ? 'Entrada editada exitosamente' : 'Entrada creada exitosamente';
     
         // ...
-        activarLoader()
+        activarLoader(); //2
         fetch(url, {
             method: httpMethod,
             headers: {
