--- a/inventarios/inventarios/staticfiles/templates/html/app/add-entradas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-entradas.html
@@ -403,6 +403,24 @@
 </script>
 
 
+<script>
+    // Función para activar el modal con loader
+function activarLoader() {
+$("#myModal").modal('show');
+
+}
+
+// Función para desactivar el modal con loader
+function desactivarLoader() {
+$("#myModal").modal('hide');
+setTimeout(function() {
+    console.log("");
+  }, 1000);
+}
+
+    
+</script>
+
 
 
 <script>
