--- a/inventarios/static/templates/html/app/add-entradas.html
+++ b/inventarios/static/templates/html/app/add-entradas.html
@@ -402,6 +402,23 @@
 
 </script>
 
+<script>
+    // Función para activar el modal con loader
+function activarLoader() {
+$("#myModal").modal('show');
+
+}
+
+// Función para desactivar el modal con loader
+function desactivarLoader() {
+$("#myModal").modal('hide');
+setTimeout(function() {
+    console.log("");
+  }, 1000);
+}
+
+    
+</script>
 
 
 
